# towermind

./: README.md
robot/: CLAUDE.md  Dockerfile  arm.py  docker-compose.yml  drive.py  identify_arm.py  identify_motors.py  identify_wheels.py  move_servos.py  ping_servos.py  restore_position_mode.py  robot.py  scan_servos.py  start_robot.sh  stop_servos.py  test_wheels.py
robot/src/robot_bringup/: package.xml  setup.py
robot/src/robot_bringup/launch/: robot.launch.py
robot/src/servo_controller/: package.xml  setup.py
robot/src/servo_controller/servo_controller/: servo_node.py
robot/src/wheel_controller/: package.xml  setup.py
robot/src/wheel_controller/wheel_controller/: wheel_node.py
voice-app/: README.md
voice-app/app/: globals.css  layout.tsx  page.tsx
voice-app/app/api/: knowledge.ts
voice-app/app/api/chat/: route.ts
voice-app/app/api/insights/: route.ts
voice-app/app/api/v1/chat/completions/: route.ts
voice-app/app/dashboard/: page.tsx
