<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files to bring up the full robot</description>
  <maintainer email="robot@local">robot</maintainer>
  <license>MIT</license>
  <depend>servo_controller</depend>
  <depend>v4l2_camera</depend>
  <build_type>ament_python</build_type>
</package>
