<?xml version="1.0"?>
<package format="3">
  <name>wheel_controller</name>
  <version>0.1.0</version>
  <description>Controls 3 wheels (continuous rotation servos) via PCA9685</description>
  <maintainer email="robot@local">robot</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <build_type>ament_python</build_type>
</package>
